--- a/src/sass/blocks/material/_material_media.scss
+++ b/src/sass/blocks/material/_material_media.scss
@@ -96,8 +96,9 @@
         }
 
         &__images {
+            gap: 10px;
             img {
-                 width: 130px;
+                 width: 145px;
                 height: 130px;
             }
         }
